dashboard atualizada + water quiz atualizado + botão saida + visualização de textos + atualização css toph game + outros

--- a/public/air-aang.html
+++ b/public/air-aang.html
@@ -9,10 +9,12 @@
 </head>
 
 <body>
-  
-        <div class="x-moviment">
-        <section class="High">
 
+    <div class="x-moviment">
+        <section class="High">
+            <div class="overlay"></div>
+            <h1>Avatar</h1>
+            <p>Dobras Elementais</p>
         </section>
         <section class="cycle-avatar">
             <div class="txt-cycle"><span>O Avatar, que pode ser homem ou mulher, é um árbitro internacional cujo dever é
@@ -25,6 +27,7 @@
             <div class="cycle-img"></div>
         </section>
         <section class="latest-avatars">
+            <div class="overlay2"></div>
             <div class="box-card">
                 <div class="kyoshi-card card"></div>
                 <div class="roku-card card"></div>
