--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,16 @@
 
 <body>
     <section id="home" class="home">
-        <div class="background-home"></div>
+        <video src="assets/babyKorra.mp4" class="background-home" autoplay muted loop></video>
+
         <div class="info-home"></div>
         <nav id="nav">
             <a href="#home" class="home-button standard"></a>
             <a href="#history" class="history-button standard">História</a>
-            <a href="#fire" class="fire-button standard"></a>
             <a href="#air" class="air-button standard"></a>
             <a href="#water" class="water-button standard"></a>
             <a href="#earth" class="earth-button standard"></a>
+            <a href="#fire" class="fire-button standard"></a>
             <a href="#aboutMe" class="aboutMe-button standard">Sobre Mim</a>
             <a href="cadastrologin.html" class="register-button "><span class="button-content">Login</span></a>
         </nav>
@@ -60,6 +61,49 @@
             </div>
         </section>
 
+
+        <section class="air" id="air">
+            <div class="aang-air"></div>
+            <div class="txt-air txt">
+                <h1>Avatares</h1>
+                <p>Bem-vindo à nossa exclusiva Sessão de Avatares e Dobras, um evento especial dedicado a mergulhar
+                    fundo no fascinante mundo de Avatar: A Lenda de Aang! Este encontro é uma oportunidade única para os
+                    fãs da série explorarem os mistérios dos Dobradores de Elementos e do papel vital do Avatar na
+                    manutenção da paz e do equilíbrio no mundo.
+                </p>
+                <p>Aprofunde seus conhecimentos agora</p>
+                <a class="button-air go" href="air-aang.html">Entrar</a>
+            </div>
+        </section>
+
+        <section class="water" id="water">
+            <div class="txt-water txt">
+                <h1>Quiz Avatar</h1>
+                <p> Bem-vindo ao Quiz de Avatar: A Lenda de Aang! Prepare-se para embarcar em uma jornada
+                    emocionante pelo mundo mágico dos Dobradores de Elementos. Se você é um fã da série animada "Avatar:
+                    A Lenda de Aang", este é o desafio perfeito para testar seus conhecimentos e habilidades!
+                </p>
+                <p>Coloque agora aprova seus conhecimento</p>
+                <a class="button-water go" href="water-quiz.html">Entrar</a>
+            </div>
+            <div class="katara-water"></div>
+        </section>
+
+        <section class="earth" id="earth">
+            <div class="toph-earth"></div>
+            <div class="txt-earth txt">
+                <h1>Toph Game</h1>
+                <p>Toph Beifong, também conhecida como Toph, é uma mestra na Dobra de Terra, uma das mais poderosas de
+                    seu tempo, e a descobridora da Dobra de Metal. Cega desde o nascimento, Toph foi tratada
+                    constantemente de maneira superprotetora por causa de sua "inabilidade", particularmente por seus
+                    pais ultra protetores, Lao e Poppy Beifong. Ao descobrir Toupeiras-Texugo, animais que dominavam a
+                    Terra e que também eram cegos, ela aprendeu a usar a dobra de terra como uma extensão de seus
+                    sentidos.
+                </p>
+                <p>Ajude Toph a identificar de onde vem os ataques inimigos</p>
+                <a class="button-earth go" href="earth-toph.html">Entrar</a>
+            </div>
+        </section>
         <section id="fire" class="fire">
             <div class="txt-fire txt">
                 <h1>Agni Kai</h1>
@@ -80,51 +124,16 @@
             </div>
             <div class="zuko-fire"></div>
         </section>
-
-        <section class="air" id="air">
-            <div class="aang-air"></div>
-            <div class="txt-air txt">
-                <h1>Avatares</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet cumque amet doloremque culpa
-                    aliquid sed officiis, nihil neque dolore voluptatum fugiat distinctio facilis est, modi, quae
-                    pariatur accusamus deleniti adipisci?Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    Dolore quidem nostrum ea deleniti tempore porro, illo voluptas numquam nobis quaerat. Quae suscipit
-                    distinctio natus incidunt libero facere adipisci sit accusamus.Lorem ipsum dolor, sit amet
-                    consectetur adipisicing elit. Consequuntur iste asperiores dolores. Fuga
-                    sunt, provident cupiditate illum aliquid aut minima aspernatur consequatur nisi incidunt, commodi
-                    
-                </p>
-                <a class="button-air go" href="air-aang.html">Entrar</a>
+        <section id="aboutMe" class="aboutMe">
+            <div class="carrosel">
+                <div class="container">
+                    <img src="assets/zukoFire.jpg" alt="">
+                    <img src="assets/tophSolo.png" alt="">
+                    <img src="assets/aangAir.jpg" alt="">
+                    <img src="assets/kataraSolo.png" alt="">
+                </div>
             </div>
         </section>
-
-        <section class="water" id="water">
-            <div class="txt-water txt">
-                <h1>Avatares</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet cumque amet doloremque culpa
-                    aliquid sed officiis, nihil neque dolore voluptatum fugiat distinctio facilis est, modi, quae
-                    pariatur accusamus deleniti adipisci?Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    Dolore quidem nostrum ea deleniti tempore porro, illo voluptas numquam nobis quaerat. Quae suscipit
-                    distinctio natus incidunt libero facere adipisci sit accusamus.Lorem ipsum dolor, sit amet
-                    consectetur adipisicing elit. Consequuntur iste asperiores dolores. Fuga
-                    
-                </p>
-                <a class="button-water go" href="earth-toph.html">Entrar</a>
-            </div>
-            <div class="katara-water"></div>
-        </section>
-
-        <section class="earth" id="earth">
-            <div class="toph-earth"></div>
-            <div class="txt-earth txt">
-                <h1>Toph Game</h1>
-                <p>Toph Beifong, também conhecida como Toph, é uma mestra na Dobra de Terra, uma das mais poderosas de seu tempo, e a descobridora da Dobra de Metal. Cega desde o nascimento, Toph foi tratada constantemente de maneira superprotetora por causa de sua "inabilidade", particularmente por seus pais ultra protetores, Lao e Poppy Beifong. Ao descobrir Toupeiras-Texugo, animais que dominavam a Terra e que também eram cegos, ela aprendeu a usar a dobra de terra como uma extensão de seus sentidos.
-                </p>
-                <p>Ajude Toph a identificar de onde vem os ataques inimigos.</p>
-                <a class="button-earth go" href="earth-toph.html">Entrar</a>
-            </div>
-        </section>
-        <section id="aboutMe" class="aboutMe"></section>
     </main>
 </body>
 
