--- a/public/water-quiz.html
+++ b/public/water-quiz.html
@@ -10,8 +10,11 @@
 </head>
 
 <body>
+    <audio autoplay loop>
+        <source src="/public/assets/agniKaiTheme.mp3" type="audio/mpeg">
+    </audio>
     <video autoplay loop class="bg-water" src="assets/BackgroundWater.mp4"></video>
-
+    <a href="index.html" class="exit-button">Sair</a>
     <section class="container">
         <div class="questions-container hide">
             <span class="question">Pergunta aqui?</span>
