cadastro linkado com banco

--- a/public/cadastrologin.html
+++ b/public/cadastrologin.html
@@ -52,7 +52,7 @@
 
 
       <span>Qual sua Dobra Favorita?</span>
-      <form id="dobraForm" class="dobraForm">
+      <label id="dobraForm" class="dobraForm">
         <input type="radio" id="fogo" name="dobra" value="fogo">
         <label for="fogo">Fogo</label><br>
         <input type="radio" id="agua" name="dobra" value="agua">
@@ -61,7 +61,7 @@
         <label for="terra">Terra</label><br>
         <input type="radio" id="ar" name="dobra" value="ar">
         <label for="ar">Ar</label><br><br>
-      </form>
+      </label>
       <button class="btn signUp" onclick="cadastrar()">Cadastrar</button>
       <span>Você já tem uma conta? <span class="red" onclick="mudar2()">Fazer login</span></span>
 
@@ -74,96 +74,90 @@
 </body>
 
 </html>
-<script src="js/cadastrologin.js"></script>
 <script>
+  function mudar(params) {
+  var overlay = document.getElementById("overlay");
+  overlay.style.transform = "translateX(0)";
+  overlay.style.background = "url(./assets/zukoArt.jpg)";
+  
+}
 
-  function cadastrar() {
-    aguardar();
+function mudar2(params) {
+  var overlay = document.getElementById("overlay");
+  overlay.style.transform = "translateX(100%)";
+  overlay.style.background = "url(./assets/kataraArt.jpg)";
+}
 
-    //Recupere o valor da nova input pelo nome do id
-    // Agora vá para o método fetch logo abaixo
-    var nomeVar = input_name.value;
-    var emailVar = input_email.value;
-    var senhaVar = input_password.value;
-    var confirmacaoSenhaVar = input_confirm.value;
-    var dobraVar = dobraForm.value
 
-    if (
-      nomeVar == "" ||
-      emailVar == "" ||
-      senhaVar == "" ||
-      confirmacaoSenhaVar == "" ||
-      dobraVar == ""
-    ) {
-      cardErro.style.display = "block";
-      mensagem_erro.innerHTML =
-        "(Mensagem de erro para todos os campos em branco)";
 
-      finalizarAguardar();
-      return false;
-    } else {
-      setInterval(sumirMensagem, 5000);
-    }
+function cadastrar() {
 
-    // Enviando o valor da nova input
-    fetch("/usuarios/cadastrar", {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json",
-      },
-      body: JSON.stringify({
-        // crie um atributo que recebe o valor recuperado aqui
-        // Agora vá para o arquivo routes/usuario.js
-        nomeServer: nomeVar,
-        emailServer: emailVar,
-        senhaServer: senhaVar,
-        dobraServer: dobraVar
-      }),
-    })
-      .then(function (resposta) {
-        console.log("resposta: ", resposta);
+  const radios = document.querySelectorAll('input[name="dobra"]');
+            let valorSelecionado = undefined;
 
-        if (resposta.ok) {
-          cardErro.style.display = "block";
+            radios.forEach((radio) => {
+                if (radio.checked) {
+                  dobraVar = radio.value;
+                }
+            });
 
-          mensagem_erro.innerHTML =
-            "Cadastro realizado com sucesso! Redirecionando para tela de Login...";
+  //Recupere o valor da nova input pelo nome do id
+  // Agora vá para o método fetch logo abaixo
+  var nomeVar = input_name.value;
+  var emailVar = input_email.value;
+  var senhaVar = input_password.value;
+  var confirmacaoSenhaVar = input_confirm.value;
+  console.log(nomeVar)
+  console.log(emailVar)
+  console.log(senhaVar)
+  console.log(confirmacaoSenhaVar)
+  console.log(dobraVar)
 
-          setTimeout(() => {
-            window.location = "login.html";
-          }, "2000");
-
-          limparFormulario();
-          finalizarAguardar();
-        } else {
-          throw "Houve um erro ao tentar realizar o cadastro!";
-        }
-      })
-      .catch(function (resposta) {
-        console.log(`#ERRO: ${resposta}`);
-        finalizarAguardar();
-      });
-
+  if (
+    nomeVar == "" ||
+    emailVar == "" ||
+    senhaVar == "" ||
+    confirmacaoSenhaVar == "" ||
+    dobraVar == ""
+  ) {
     return false;
   }
 
-  function listar() {
-    fetch("/empresas/listar", {
-      method: "GET",
-    })
-      .then(function (resposta) {
-        resposta.json().then((empresas) => {
-          empresas.forEach((empresa) => {
-            listaEmpresas.innerHTML += `<option value='${empresa.id}'>${empresa.cnpj}</option>`;
-          });
-        });
-      })
-      .catch(function (resposta) {
-        console.log(`#ERRO: ${resposta}`);
-      });
-  }
+  // Enviando o valor da nova input
+  fetch("/usuarios/cadastrar", {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json",
+    },
+    body: JSON.stringify({
+      // crie um atributo que recebe o valor recuperado aqui
+      // Agora vá para o arquivo routes/usuario.js
+      nomeServer: nomeVar,
+      emailServer: emailVar,
+      senhaServer: senhaVar,
+      dobraServer: dobraVar
+    }),
+  })
+    .then(function (resposta) {
+      console.log("resposta: ", resposta);
 
-  function sumirMensagem() {
-    cardErro.style.display = "none";
-  }
+      if (resposta.ok) {
+
+
+        setTimeout(() => {
+          window.location = "dashboard/dashboard.html";
+        }, "2000");
+
+
+      } else {
+        throw "Houve um erro ao tentar realizar o cadastro!";
+      }
+    })
+    .catch(function (resposta) {
+      console.log(`#ERRO: ${resposta}`);
+    });
+
+  return false;
+}
 </script>
+
