--- a/public/index.html
+++ b/public/index.html
@@ -96,9 +96,7 @@
                 <p>Toph Beifong, também conhecida como Toph, é uma mestra na Dobra de Terra, uma das mais poderosas de
                     seu tempo, e a descobridora da Dobra de Metal. Cega desde o nascimento, Toph foi tratada
                     constantemente de maneira superprotetora por causa de sua "inabilidade", particularmente por seus
-                    pais ultra protetores, Lao e Poppy Beifong. Ao descobrir Toupeiras-Texugo, animais que dominavam a
-                    Terra e que também eram cegos, ela aprendeu a usar a dobra de terra como uma extensão de seus
-                    sentidos.
+                    pais ultra protetores, Lao e Poppy Beifong.
                 </p>
                 <p>Ajude Toph a identificar de onde vem os ataques inimigos</p>
                 <a class="button-earth go" href="earth-toph.html">Entrar</a>
@@ -114,10 +112,6 @@
                     Os
                     duelos são geralmente usados para resolver conflitos e também um tipo de entretenimento. O Palácio
                     Real da Nação do Fogo ainda abriga uma câmara especial para o Agni Kai.
-
-                    O objetivo desses duelos é fazer com que o oponente fique sem equilíbrio, e incapacitar ele com o
-                    último ataque. O melhor movimento para acabar com o duelo é gerar uma explosão de fogo na cara do
-                    adversário (como evidência, a cicatriz de Zuko).
                 </p>
                 <p class="txt-scd">Participe de um Agni Kai Agora</p>
                 <a class="button-agnikai go" href="fire-AgniKai.html">Entrar</a>
