--- a/public/fire-AgniKai.html
+++ b/public/fire-AgniKai.html
@@ -13,11 +13,11 @@
 
 <body>
     <audio autoplay loop>
-        <source src="/public/assets/agniKaiTheme.mp3" type="audio/mpeg">
+        <source src="./assets/agniKaiTheme.mp3" type="audio/mpeg">
     </audio>
     <!--  Background 01 - FIRE -->
     <div class="videoBackground">
-        <video src="/public/assets/FireBackground.mp4" loop muted autoplay></video>
+        <video src="./assets/FireBackground.mp4" loop muted autoplay></video>
     </div>
 
     <div class="toptext">
