--- a/public/water-quiz.html
+++ b/public/water-quiz.html
@@ -11,9 +11,9 @@
 
 <body>
     <audio autoplay loop>
-        <source src="/public/assets/agniKaiTheme.mp3" type="audio/mpeg">
+        <source src="./assets/agniKaiTheme.mp3" type="audio/mpeg">
     </audio>
-    <video autoplay loop class="bg-water" src="assets/BackgroundWater.mp4"></video>
+    <video autoplay loop class="bg-water" src="./assets/BackgroundWater.mp4"></video>
     <a href="index.html" class="exit-button">Sair</a>
     <section class="container">
         <div class="questions-container hide">
