alterações back login

--- a/public/cadastrologin.html
+++ b/public/cadastrologin.html
@@ -10,7 +10,12 @@
 
 <body>
   <div class="content">
-    <div class="overlay" id="overlay"></div>
+    <div id="msg_erro" class="msg-erro">
+      <span class="error">ERRO</span>
+      <span id="msgErro">Senha Errada</span>
+    </div>
+    <div class="overlay" id="overlay">
+    </div>
     <div class="wall first-wall">
       <h1 class="login-title">Login</h1>
       <div class="inputForm">
@@ -22,7 +27,7 @@
         <span>Senha</span>
         <input type="password" id="input_password_log">
       </div>
-      <button class="btn signIn">Acessar</button>
+      <button class="btn signIn" onclick="entrarLogin()">Acessar</button>
       <span>Você não tem uma conta? <span class="blue" onclick="mudar()">Cadastrar</span></span>
 
     </div>
@@ -75,6 +80,66 @@
 
 </html>
 <script>
+  function entrarLogin() {
+
+var emailVar = input_email_log.value;
+var senhaVar = input_password_log.value;
+
+if (emailVar == "" || senhaVar == "") {
+    return false;
+}
+
+
+console.log("FORM LOGIN: ", emailVar);
+console.log("FORM SENHA: ", senhaVar);
+
+fetch("/usuarios/autenticar", {
+    method: "POST",
+    headers: {
+        "Content-Type": "application/json"
+    },
+    body: JSON.stringify({
+        emailServer: emailVar,
+        senhaServer: senhaVar
+    })
+}).then(function (resposta) {
+    console.log("ESTOU NO THEN DO entrar()!")
+
+    if (resposta.ok) {
+        console.log(resposta);
+
+        resposta.json().then(json => {
+            console.log(json);
+            console.log(JSON.stringify(json));
+            sessionStorage.EMAIL_USUARIO = json.email;
+            sessionStorage.NOME_USUARIO = json.nome;
+            sessionStorage.ID_USUARIO = json.id;
+
+            setTimeout(function () {
+              window.location = "dashboard/dashboard.html";
+            }, 1000); // apenas para exibir o loading
+
+        });
+
+    } else {
+
+        console.log("Houve um erro ao tentar realizar o login!");
+
+        
+    }
+
+}).catch(function (erro) {
+    console.log(erro);
+})
+
+return false;
+}
+
+
+
+
+
+
   function mudar(params) {
   var overlay = document.getElementById("overlay");
   overlay.style.transform = "translateX(0)";
@@ -89,18 +154,63 @@ function mudar2(params) {
 }
 
 
+function exibirMsgErro(params) {
+  msg_erro.style.display = 'flex'
+  setTimeout(function () {
+    msg_erro.style.display = 'none';
+    }, 6000);
+}
+
+function validarEmail() {
+    var email = input_email.value;
+    var mensagemEmail = '';
+    var emailCom = email.endsWith('.com');
+    var emailArroba = email.indexOf("@");
+    if (emailCom == false || emailArroba == -1) {
+      exibirMsgErro()
+        mensagemEmail = 'Email inválido';
+        msgErro.innerHTML = mensagemEmail;
+    } else {
+        return true;
+    }
+}
+
+
+
+function validarSenha() {
+    senha = input_password.value;
+    var confirmarSenha = input_confirm.value;
+    var mensagemSenha = '';
+
+    if (confirmarSenha != senha) {
+        exibirMsgErro();
+        mensagemSenha = 'Senhas não são iguais.';
+        msgErro.innerHTML = mensagemSenha;
+    }else if (!/[A-Z]/.test(senha)) {
+        exibirMsgErro();
+        mensagemSenha = 'Senha deve conter pelo menos uma letra maiúscula.';
+        msgErro.innerHTML = mensagemSenha;
+    }
+    else if (!/[a-z]/.test(senha)) {
+        exibirMsgErro();
+        mensagemSenha = 'Senha deve conter pelo menos uma letra minúscula.';
+        msgErro.innerHTML = mensagemSenha;
+    }
+    else if (senha.length < 8) {
+        exibirMsgErro();
+        mensagemSenha = 'Senha deve ter no mínimo 8 caracteres.';
+        msgErro.innerHTML = mensagemSenha;
+    }
+    else {
+        return true;
+    }
+}
+
+
 
 function cadastrar() {
-
-  const radios = document.querySelectorAll('input[name="dobra"]');
-            let valorSelecionado = undefined;
-
-            radios.forEach((radio) => {
-                if (radio.checked) {
-                  dobraVar = radio.value;
-                }
-            });
-
+  validarEmail()
+  validarSenha()
   //Recupere o valor da nova input pelo nome do id
   // Agora vá para o método fetch logo abaixo
   var nomeVar = input_name.value;
@@ -112,6 +222,14 @@ function cadastrar() {
   console.log(senhaVar)
   console.log(confirmacaoSenhaVar)
   console.log(dobraVar)
+
+  const radios = document.querySelectorAll('input[name="dobra"]');
+    let dobraVar = undefined;
+
+    radios.forEach((radio) => {
+      if (radio.checked) {
+        dobraVar = radio.value;
+        }});
 
   if (
     nomeVar == "" ||
@@ -158,6 +276,15 @@ function cadastrar() {
     });
 
   return false;
+
+
+
+
+
+ //login
+
+
+
 }
 </script>
 
