--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -16,8 +16,8 @@
         <div class="user">
             <div class="photo"></div>
             <div class="account">
-                <span>Usuário</span>
-                <span>Usuário@email.com</span>
+                <span id="name_usuario"></span>
+                <span id="email_usuario">Usuário@email.com</span>
             </div>
         </div>
         <div class="btn-user">
@@ -25,7 +25,7 @@
                     class="material-icons">bar_chart</span><span>Dados</span></a>
             <a href="#personal" class="button-style userBtn"><span
                     class="material-icons">format_paint</span><span>Personalizar</span></a>
-            <div class="button-exit userBtn"><span class="material-icons">logout</span> <span>Sair</span></div>
+            <div onclick="limparSessao()" class="button-exit userBtn"><span class="material-icons">logout</span> <span>Sair</span></div>
         </div>
     </section>
     <div class="info">
