--- a/public/water-quiz.html
+++ b/public/water-quiz.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="controls-container">
-            <button class="next-question button hide">Próxima Pergunta</button>
+            <button class="next-question button hide">Próximo</button>
             <button class="start-quiz button">Começar Quiz</button>
         </div>
     </section>
