--- a/public/alert.html
+++ b/public/alert.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    <div class="login-card">
+    <div id="cardLogin" class="login-card">
         <div class="txt-card-login">
             <p>🚨Faça o Login</p>
             <span>Para acessar áreas de dobras elementais você precisa estar logado.</span>
         </div>
         <div class="button-card-login">
-            <span class="button-exit alert">Sair</span>
+            <span onclick="close()" class="button-exit alert">Sair</span>
             <span class="button-register alert">Fazer-Login</span>
         </div>
     </div>
 </body>
-</html>
 
+</html>
+<script src="/public/js/home.js"></script>
