aviso alert  login

--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
                     manutenção da paz e do equilíbrio no mundo.
                 </p>
                 <p>Aprofunde seus conhecimentos agora</p>
-                <a class="button-air go" href="air-aang.html">Entrar</a>
+                <button class="button-air go" onclick="goAir()">Entrar</button>
             </div>
         </section>
 
@@ -135,8 +135,8 @@
             <span>Para acessar áreas de dobras elementais você precisa estar logado.</span>
         </div>
         <div class="button-card-login">
-            <span onclick="close()" class="button-exit alert">Sair</span>
-            <span class="button-register alert">Fazer-Login</span>
+            <span onclick="closeLogin()" class="button-exit alert">Sair</span>
+            <span onclick="goLogin()" class="button-register alert">Fazer-Login</span>
         </div>
     </div>
 </body>
