--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -25,7 +25,7 @@
                     class="material-icons">bar_chart</span><span>Dados</span></a>
             <a href="#personal" class="button-style userBtn"><span
                     class="material-icons">format_paint</span><span>Personalizar</span></a>
-            <div onclick="limparSessao()" class="button-exit userBtn"><span class="material-icons">logout</span> <span>Sair</span></div>
+            <div onclick="sair()" class="button-exit userBtn"><span class="material-icons">logout</span> <span>Sair</span></div>
         </div>
     </section>
     <div class="info">
