--- a/public/indexLogado.html
+++ b/public/indexLogado.html
@@ -25,8 +25,14 @@
             <a href="#earth" class="earth-button standard"></a>
             <a href="#fire" class="fire-button standard"></a>
             <a href="#aboutMe" class="aboutMe-button standard">Sobre Mim</a>
-            <a id="buttonLogin" href="cadastrologin.html" class="register-button"><span class="button-content">Login</span></a>
-         
+            <a id="buttonPainel" href="dashboard/dashboard.html" class="register-button"><span class="button-content">Painel</span></a>
+            <div class="perfil">
+                <div class="photo"></div>
+                <div class="content-perfil">
+                    <span id="name_perfil">Usuário</span>
+                    <span id="email_perfil">Usuário@email.com</span>
+                </div>
+            </div>
         </nav>
     </section>
     <main>
@@ -143,5 +149,4 @@
 </body>
 
 </html>
-<script src="js/home.js"></script>
-
+<script src="js/homeLogado.js"></script>
